--- a/assets/style.css
+++ b/assets/style.css
@@ -20,10 +20,67 @@ body {
 .wrap-inner {
     min-height: 70vh;
     width: 80%;
-    background-color: #1d1d1d;
-
+    background-color: #252525;
+    /* #1d1d1d */
 }
 
 .bg-nav-dark {
     background-color: #1d1d1d !important;
 }
+
+.txt_container{
+width:50%;
+height:50%;
+
+}
+
+.text_size{
+font-size:60px;
+}
+
+.parent_txt_container{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    margin-top: 3%;
+}
+
+.domain_txt{
+    color:#00cc99
+}
+.input_container{
+    display: flex;
+    flex-direction: row;
+    margin-top: 5%;
+    
+}
+.domain_container{
+    display: flex;
+    flex-direction: column;
+}
+.custom-select{
+    width:200px;
+    height:40px;
+    border-radius: 10px;
+}
+
+.search_btn{
+    width:40px;
+    height:40px;
+    /* padding: 8px;
+    background-color: #dee4dc;
+    border: none; */
+    cursor: pointer;
+    border-radius: 10px;
+    background-color:#00cc99 ;
+    margin-top: 10px;
+
+  }
+
+/* .domain_container-cnt{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}   */
